--- a/metricbeat/metricbeat.yml
+++ b/metricbeat/metricbeat.yml
@@ -1,14 +1,20 @@
 metricbeat.modules:
 - module: system
+  period: 10s
   metricsets:
     - cpu
-    - filesystem
+    - load
     - memory
     - network
     - process
-  enabled: true
-  period: 10s
+    - process_summary
+    - core
+    - diskio
+    - socket
   processes: ['.*']
+  process.include_top_n:
+    by_cpu: 5      # include top 5 processes by CPU
+    by_memory: 5   # include top 5 processes by memory
   ticks: false
 output.elasticsearch:
   hosts: ["es:9200"]
